--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config config/webpack.prod.js",
+    "start": "webpack serve --config config/webpack.dev.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
