--- a/babel.config.json
+++ b/babel.config.json
@@ -1,16 +1,15 @@
 {
   "presets": [
+    "@babel/react",
+    "@babel/typescript",
     [
-      "@babel/preset-env",
+      "@babel/env",
       {
-        "corejs": 3.17,
-        "useBuiltIns": "usage"
-      }
-    ],
-    [
-      "@babel/preset-react",
-      {
-        "runtime": "automatic"
+        "modules": false,
+        "targets": {
+          "chrome": "58",
+          "ie": "11"
+        }
       }
     ]
   ]
