--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build": "webpack --config config/webpack.prod.js",
-    "start": "webpack --config config/webpack.config.js",
+    "build": "webpack",
+    "start": "webpack serve --config config/webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
