--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.27",
+    "@types/react-datepicker": "^4.1.7",
     "axios": "^0.21.4",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.1",
     "react-redux": "^7.2.5",
