--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --config config/webpack.config.js",
+
+    "start": "webpack serve --open --config config/webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
