--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,19 +4,21 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    // "sourceMap": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
-    "noImplicitAny": true,
-    "jsx": "react"
+    "noEmit": true,
+    "noImplicitThis": false,
+    "noImplicitAny": false,
+    "jsx": "react-jsx"
   },
-  "include": ["./src/**/*"]
+  "include": ["src"]
 }
