--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node": "^12.20.27",
     "@types/react-datepicker": "^4.1.7",
     "axios": "^0.21.4",
+    "file-loader": "^6.2.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
@@ -31,13 +33,14 @@
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.2.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
   "scripts": {
-
     "start": "webpack serve --open --config config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js",
     "test": "react-scripts test",
@@ -78,10 +81,7 @@
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
-    "node-sass": "^6.0.1",
     "react-refresh": "^0.10.0",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
